@@ -28,7 +28,7 @@ export ARCHIVE_DIR
 
 TERM_FILE="${RUNTIME_DIR}/Termfile"
 DEFS_FILE="${RUNTIME_DIR}/do_defs"
-OBO_FILE="${DATADOWNLOADS}/raw.githubusercontent.com/DiseaseOntology/HumanDiseaseOntology/master/src/ontology/doid-merged.obo"
+OBO_FILE="${DATADOWNLOADS}/raw.githubusercontent.com/DiseaseOntology/HumanDiseaseOntology/main/src/ontology/doid-merged.obo"
 OBO_FILE_VERSION="1.2"
 export OBO_FILE
 export OBO_FILE_VERSION
