@@ -1,3 +1,8 @@
+TAG: vocload-6-0-16-4
+DATE: 09/23/2020
+STAFF: lec
+CHANGES: TR13072/ignore OBO/alt_id when processing Disease Ontology
+
 TAG: vocload-6-0-16-3
 DATE: 09/14/2020
 STAFF: lec
